Se actualiza mail remitente

--- a/application/config/email.php.sample
+++ b/application/config/email.php.sample
@@ -1,6 +1,6 @@
 <?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
 
-$config['email_from']='tramitador@minsegpres.gob.cl';
+$config['email_from']='simple@chilesinpapeleo.cl';
 $config['protocol'] = 'sendmail';   //mail, sendmail o smtp
 $config['smtp_host'] = '';
 $config['smtp_user'] = '';
