--- a/application/config/config.php.sample
+++ b/application/config/config.php.sample
@@ -359,6 +359,11 @@ $config['proxy_ips'] = '';
 
 
 /*
+ * Servidor soporta HTTPS
+ */
+$config['https'] = false;
+
+/*
  * Configuracion del servidor Pusher (pusher.com) para poder modelar procesos
  * en forma colaborativa.
  */
