--- a/application/config/email.php.sample
+++ b/application/config/email.php.sample
@@ -1,8 +1,7 @@
 <?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
 
-$config['email_from']='simple@chilesinpapeleo.cl';
-$config['protocol'] = 'sendmail';   //mail, sendmail o smtp
+$config['protocol'] = 'mail';   //mail, sendmail o smtp
 $config['smtp_host'] = '';
 $config['smtp_user'] = '';
 $config['smpt_pass'] = '';
-$config['smtp_port'] = '';
+$config['smtp_port'] = '25';
