--- a/application/config/email.php.sample
+++ b/application/config/email.php.sample
@@ -1,5 +1,6 @@
 <?php  if ( ! defined('BASEPATH')) exit('No direct script access allowed');
 
+$config['mailtype']='html';
 $config['protocol'] = 'mail';   //mail, sendmail o smtp
 $config['smtp_host'] = '';
 $config['smtp_user'] = '';
