Se implementa firma con HSM

--- a/application/config/config.php.sample
+++ b/application/config/config.php.sample
@@ -381,5 +381,12 @@ $config['pusher_api_key'] = '';
 $config['pusher_secret'] = '';
 $config['pusher_app_id'] = '';
 
+/*
+ * Configuracion del servidor HSM
+ */
+$config['hsm_url']='';
+$config['hsm_user']='';
+$config['hsm_password']='';
+
 /* End of file config.php */
 /* Location: ./application/config/config.php */
