Se configuran backups con Amazon S3

--- a/application/config/config.php.sample
+++ b/application/config/config.php.sample
@@ -367,10 +367,8 @@ $config['https'] = false;
 /*
  * Configuracion de backups
  */
-$config['backupserver_ip']='';
-$config['backupserver_username']='';
-$config['backupserver_password']='';
-$config['backupserver_path']='';
+$config['awsAccessKey']='';
+$config['awsSecretKey']='';
 
 
 /*
