Se agregan templates

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,14 @@
 syntax: glob
-config.php
-database.php
+application/config/config.php
+application/config/database.php
+application/config/email.php
 nbproject
-uploads
-email.php
+uploads/datos
+uploads/documentos
+uploads/firmas
+uploads/logos
+uploads/logos_certificados
+uploads/timbres
 application/libraries/tcpdf/cache
 sphinx/index
 sphinx/run
